--- a/style.css
+++ b/style.css
@@ -12,16 +12,16 @@ body{
     background-image: url("./media/images/bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: max(1000px ,100vw);
-    height: 70vh;
+    background-size: max(1200px ,100vw);
+    height: 644px;
     position: relative;
 }
 .main .box{
     position: absolute;
     top: 0;
-    height: 70vh;
+    height: 644px;
     width: 100%;
-    opacity: 0.44;
+    opacity: 0.7;
     background-color: #000000;
 }
 nav{
@@ -30,11 +30,11 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 62px;
+    height: 100px;
 }
 nav img{
     color:#ff0000;
-    width: 114px;
+    width: 130px;
     position: relative;
     z-index: 10;
 }
@@ -44,24 +44,64 @@ nav button{
 }
 .hero{
     font-family: "Martel Sans", sans-serif;
-    height: 100%;
+    height:100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    color: white;
+    color: #ffffff;
     position: relative;
     gap: 23px;
+    padding:0 30px;
 }
-.hero> :first-child{
+.hero> :nth-child(1){
+    font-family: 'Poppins', sans-serif;
     font-weight: bolder;
-    font-size: 38px;
+    font-size: 48px;
+    text-align: center;
 }
 .hero> :nth-child(2){
-    font-weight: 700;
-    font-size: 25px;
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
 }
 .hero> :nth-child(3){
-  
-    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    font-size: 20px;
+}
+.btn{
+    padding: 3px 8px;
+    font-weight: 400;
+    color:#ffffff;
+    background-color:rgba(248,243,243,0.021);
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
+.btn-red{
+background-color: #ff0000;
+padding: 3px 25px;
+font-size: 20px;
+border-radius: 4px;
+font-weight: 400;
+}
+.btn-red-sm{
+    background-color: #ff0000;
+    color: #ffffff;
+}
+.hero-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+.main input{
+    padding: 7px 101px 8px 14px;
+    font-weight: 900;
+    color: #ffffff;
+font-size: 12px;
+border-radius: 4px;
+background-color: rgba(15,15,15,0.7);
+border: 1px solid rgba(246,238,238,0.5);
 }
